force-app/main/default/objects/ProductConsumptionTracking__c/ProductConsumptionTracking__c.object-meta.xml
<CustomObject>
    <label>Product Consumption Tracking</label>
    <nameField>
        <displayFormat>PCT-{0000}</displayFormat>
        <label>ProductConsumptionTracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Consumption Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>