force-app/main/default/objects/ProductConsumptionTracking__c/fields/Batch_Status__c.field-meta.xml
<CustomField>
    <fullName>Batch_Status__c</fullName>
    <formula>IF(
  DAY(First_Consumption_Date__c) &lt;= 15,
  &quot;Batch 2&quot;,
  &quot;Batch 1&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch Status</label>
    <type>Text</type>
</CustomField>