force-app/main/default/objects/ProductConsumptionTracking__c/fields/Bucket_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Bucket_End_Date__c</fullName>
    <label>Bucket End Date</label>
    <type>Date</type>
</CustomField>