force-app/main/default/objects/ProductConsumptionTracking__c/fields/Bucket_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Bucket_Start_Date__c</fullName>
    <label>Bucket Start Date</label>
    <type>Date</type>
</CustomField>