force-app/main/default/objects/ProductConsumptionTracking__c/fields/Consumption_Bucket_Index__c.field-meta.xml
<CustomField>
    <fullName>Consumption_Bucket_Index__c</fullName>
    <label>Consumption Bucket Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>