force-app/main/default/objects/ProductConsumptionTracking__c/fields/Consumption_Month_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Consumption_Month_Start_Date__c</fullName>
    <label>Consumption Month Start Date</label>
    <type>Date</type>
</CustomField>