force-app/main/default/objects/ProductConsumptionTracking__c/fields/Consumption_Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Consumption_Month_Year__c</fullName>
    <label>Consumption Month Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>