force-app/main/default/objects/ProductConsumptionTracking__c/fields/First_Half_Qty__c.field-meta.xml
<CustomField>
    <fullName>First_Half_Qty__c</fullName>
    <label>First Half Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>