force-app/main/default/objects/ProductConsumptionTracking__c/fields/First_Half_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Half_Start_Date__c</fullName>
    <label>First Half Start Date</label>
    <type>Date</type>
</CustomField>