force-app/main/default/objects/ProductConsumptionTracking__c/fields/Is_MSL_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Is_MSL_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is MSL Eligible</label>
    <type>Checkbox</type>
</CustomField>