force-app/main/default/objects/ProductConsumptionTracking__c/fields/Last_MSL_Calculated_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_MSL_Calculated_Date__c</fullName>
    <label>Last MSL Calculated Date</label>
    <type>Date</type>
</CustomField>