force-app/main/default/objects/ProductConsumptionTracking__c/fields/Month_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Month_End_Date__c</fullName>
    <label>Month End Date</label>
    <type>Date</type>
</CustomField>