force-app/main/default/objects/ProductConsumptionTracking__c/fields/Month_Name__c.field-meta.xml
<CustomField>
    <fullName>Month_Name__c</fullName>
    <label>Month Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>