force-app/main/default/objects/ProductConsumptionTracking__c/fields/MSL_Value__c.field-meta.xml
<CustomField>
    <fullName>MSL_Value__c</fullName>
    <label>MSL Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>