force-app/main/default/objects/ProductConsumptionTracking__c/fields/Not_Eligible_For_PO__c.field-meta.xml
<CustomField>
    <fullName>Not_Eligible_For_PO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Eligible For PO</label>
    <type>Checkbox</type>
</CustomField>