force-app/main/default/objects/ProductConsumptionTracking__c/fields/Processed_For_PO__c.field-meta.xml
<CustomField>
    <fullName>Processed_For_PO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processed For PO</label>
    <type>Checkbox</type>
</CustomField>