force-app/main/default/objects/ProductConsumptionTracking__c/fields/Second_Half_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Second_Half_End_Date__c</fullName>
    <label>Second Half End Date</label>
    <type>Date</type>
</CustomField>