force-app/main/default/objects/ProductConsumptionTracking__c/fields/Second_Half_Qty__c.field-meta.xml
<CustomField>
    <fullName>Second_Half_Qty__c</fullName>
    <label>Second Half Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>