force-app/main/default/objects/ProductConsumptionTracking__c/fields/Six_Month_First_Consumption_Date__c.field-meta.xml
<CustomField>
    <fullName>Six_Month_First_Consumption_Date__c</fullName>
    <label>Six Month First Consumption Date</label>
    <type>Date</type>
</CustomField>