force-app/main/default/objects/ProductConsumptionTracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Product__c</columns>
    <columns>Month_Name__c</columns>
    <columns>Month_Start_Date__c</columns>
    <columns>First_Consumption_Date__c</columns>
    <columns>Total_Month_Qty__c</columns>
    <columns>Processed_For_PO__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>contains</operation>
        <value>Divya</value>
    </filters>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>Headlights</value>
    </filters>
    <label>All</label>
</ListView>